src/objects/sdfs__FormulaShare_Rule_in_Batch__c.object
<CustomObject>
    <fields>
        <fullName>sdfs__FormulaShare_Log__c</fullName>
        <label>FormulaShare Log</label>
        <referenceTo>sdfs__FormulaShare_Log__c</referenceTo>
        <relationshipLabel>Rules in Batch</relationshipLabel>
        <relationshipName>FormulaShare_Rules_in_Batch</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Rule_Name__c</fullName>
        <label>FormulaShare Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Record_Errors_in_This_Batch__c</fullName>
        <label>Record Errors in This Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Records_Shared_in_This_Batch__c</fullName>
        <label>Records Shared in This Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Rule_Active_for_Batch_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Active for Batch Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Total_Records_Shared_by_Rule__c</fullName>
        <label>Total Records Shared by Rule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FormulaShare Rule in Batch</label>
    <nameField>
        <displayFormat>FR-{0000000}</displayFormat>
        <label>FormulaShare Rule in Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Rules in Batch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>